# linear-congruential-generator

./: CMakeLists.txt  bernoulli.h  binomial.cpp  binomial.h  hypergeometric.cpp  hypergeometric.h  lcg.cpp  lcg.sln  normal.h  poisson.h  special_lcg.cpp  test.cpp
lcg/: bernoulli.cpp  exponential.cpp  exponential.h  geometric.cpp  geometric.h  lcg.h  lcg.vcxproj  lcg.vcxproj.filters  normal.cpp  poisson.cpp  special_lcg.h  uniform.cpp  uniform.h
lcg/Debug/: vc141.idb
lcg/Debug/lcg.tlog/: CL.write.1.tlog  lcg.lastbuildstate  lcg.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lcg/Release/lcg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lcg.lastbuildstate  lcg.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lcg/x64/Debug/: vc141.idb
lcg/x64/Debug/lcg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lcg.lastbuildstate  lcg.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lcg/x64/Release/lcg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lcg.lastbuildstate  lcg.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: lcg.ilk
x64/Release/: lcg.iobj  lcg.ipdb
